Improve support for open modules